# ArtistsLibrary

./: .gitignore  ArtistsLibrary.sln  CMakeLists.txt  README.md
ArtistsLibrary/: Artist.cpp  Artist.h  ArtistController.cpp  ArtistController.h  ArtistRepository.cpp  ArtistRepository.h  ArtistsLibrary.vcxproj  ArtistsLibrary.vcxproj.filters  KHH.cpp  KHH.h  KRnB.cpp  KRnB.h  UserInterface.cpp  UserInterface.h  main.cpp
ArtistsLibraryTest/: ArtistLibraryTest.cpp  ArtistsLibraryTest.rc  ArtistsLibraryTest.vcxproj  ArtistsLibraryTest.vcxproj.filters  pch.cpp  resource.h
